# Web-Screenshot-Bot

./: .deepsource.toml  .gitignore  Cdddh  Dockerfile  Procfile  README.md  Rrd  __main__.py  app.json  config.env.sample  config.py  creds.py  logger.py  main.py  pyproject.toml  requirements.txt  webshotbot.py
assets/: inject.js
engine/: __init__.py  browser.py  request.py  worker.py
helper/: __init__.py  callback.py  images.py  printer.py
helper/printer/: __init__.py
plugins/: callback_handler.py  command_handler.py  command_handlers.py  downloader.py  logger.py  slicer_tool.py  tool_bundle.py
