[tool.poetry]
name = "web-screenshot-bot"
version = "0.3.1"
description = "A simple telegram bot to take screenshot of a given website and upload it to telegram"
authors = ["alenpaul2001 <alenpaul2001@gmail.com>"]
license = "AGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^8.4.0"
Pyrogram = "^1.2.20"
TgCrypto = "^1.2.2"
pyppeteer = "^0.2.6"
cachetools = "^5.0.0"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
mypy = "^0.930"
flake8 = "^4.0.1"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
