[tool.poetry]
name = "web-screenshot-bot"
version = "0.4.1"
description = "A simple telegram bot to take screenshot of a given website and upload it to telegram"
authors = ["alenpaul2001 <alenpaul2001@gmail.com>"]
license = "AGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.11"
Pillow = "^10.1.0"
Pyrogram = "^2.0"
TgCrypto = "^1.2"
cachetools = "^5.3"
python-dotenv = "^1.0"
playwright = "^1.40"
ipdb = "^0.13.13"

[tool.poetry.dev-dependencies]
mypy = "*"
flake8 = "*"
black = "*"
rich = "*"
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
